--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gsap": "^3.12.5",
+    "lenis": "^1.1.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -26,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "gh-pages": "^6.2.0",
     "globals": "^15.11.0",
+    "tailwindcss": "^3.4.14",
     "vite": "^5.4.10"
   }
 }
