--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@gsap/react": "^2.1.1",
     "gsap": "^3.12.5",
     "lenis": "^1.1.16",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
